--- a/pom.xml
+++ b/pom.xml
@@ -33,15 +33,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-         		 <groupId>org.apache.maven.plugins</groupId>
-         		 <artifactId>maven-surefire-plugin</artifactId>
-          		 <version>2.19.1</version>
-         		 <configuration>
-          		     <testFailureIgnore>true</testFailureIgnore>
-	   		    
-           		 </configuration>
-       		        </plugin>
 		</plugins>
 	</build>
 	<repositories>
@@ -56,10 +47,10 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 
-		<sonar.organization>jononekin</sonar.organization>
+		<sonar.organization>unaxdox</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.projectKey>jononekin_monopolyci</sonar.projectKey>
-		<sonar.login>90a468852cc035e4be637130569e928051818a41</sonar.login>
+		<sonar.projectKey>unaxdox/monopoly</sonar.projectKey>
+		<sonar.login>5c1129488c57195301aed50df3cbf8e5e70d6ee2</sonar.login>
 	</properties>
 
 	<!-- https://mvnrepository.com/artifact/junit/junit -->
